changes from peer review

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,17 @@
     <meta name="author" content="Anna Brereton">
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css/portfolio-styles.css">
 
-    <link rel="icon" href="images/favicon.png" sizes="192x192">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon_io/favicon.ico" sizes="192x192">
+    <link rel="shortcut icon" href="images/favicon_io/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+    <link rel="android-chrome-512x512-icon" href="images/favicon_io/android-chrome-512x512.png">
+    <link rel="android-chrome-192x192-icon" href="images/favicon_io/android-chrome-192x192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -25,123 +29,243 @@
 
 <body>
 
-<div class="nav-container">
-    <nav aria-label="main navigation">
-        <ul class="menu-buttons">
-            <li><a href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/index.html"><i class="fa-solid fa-house"></i></a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/about.html">About</a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/portfolio.html">Portfolio</a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</div>
-
-<div class="portfolio">
-    <h1>Portfolio</h1>
-    <h2>Check out some examples of my work below.</h2>
-    <ul class="project-list">
-        <li class="project-card">
-            <article>
-                <h3>Project 1</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 2</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 3</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 4</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 5</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 6</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 7</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 8</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-        <li class="project-card">
-            <article>
-                <h3>Project 9</h3>
-                <div class="project-links">
-                    <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-solid fa-link"></i></a>
-                </div>
-                <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </article>
-        </li>
-    </ul>
-</div>
-
-<footer>
-    <p class="footer">Copyright Anna Brereton</p>
-    <div class="media-links">
-        <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-        <a href="https://uk.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+    <div class="nav-container">
+        <nav aria-label="main navigation">
+            <ul class="menu-buttons">
+                <li>
+                    <a class="menu-item" href="index.html" title="home" aria-label="home">
+                        <i class="fa-solid fa-house"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="about.html">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="contact.html">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
-</footer>
-    
-</div>
+
+    <div class="portfolio">
+        <h1>
+            Portfolio
+        </h1>
+        <h2>
+            Check out some examples of my work below.
+        </h2>
+        <ul class="project-list">
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 1
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 2
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 3
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 4
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 5
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 6
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 7
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 8
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#">
+                            <i class="fa-solid fa-link" title="live project link" aria-label="live project link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+            <li class="project-card">
+                <article>
+                    <h3>
+                        Project 9
+                    </h3>
+                    <div class="project-links">
+                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                            <i class="fa-brands fa-github">
+                            </i>
+                        </a>
+                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link">
+                            </i>
+                        </a>
+                    </div>
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </article>
+            </li>
+        </ul>
+    </div>
+
+    <footer>
+        <p class="footer">
+            Copyright Anna Brereton
+        </p>
+        <div class="media-links" aria-label="contact-links">
+            <a href="#" title="email">
+                <i class="fa-solid fa-envelope" aria-label="email">
+                </i>
+            </a>
+            <a href="https://github.com/annabrereton" title="github">
+                <i class="fa-brands fa-github" aria-label="github">
+                </i>
+            </a>
+            <a href="https://uk.linkedin.com/" title="linkedin">
+                <i class="fa-brands fa-linkedin" aria-label="linkedin">
+                </i>
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
