--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <meta name="author" content="Anna Brereton">
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css/styles.css">
 
-    <link rel="icon" href="images/favicon.png" sizes="192x192">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="apple-touch-icon" href="images/favicon.png">
+    <link rel="icon" href="images/favicon_io/favicon.ico" sizes="192x192">
+    <link rel="shortcut icon" href="images/favicon_io/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+    <link rel="android-chrome-512x512-icon" href="images/favicon_io/android-chrome-512x512.png">
+    <link rel="android-chrome-192x192-icon" href="images/favicon_io/android-chrome-192x192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -25,37 +29,70 @@
 
 <body>
 
-<div class="nav-container">
-    <nav aria-label="main navigation">
-        <ul class="menu-buttons">
-            <li><a href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/index.html"><i class="fa-solid fa-house"></i></a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/about.html">About</a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/portfolio.html">Portfolio</a></li>
-            <li><a class="menu-item" href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-</div>
-
-<div class="logo-name-cv">
-    <div class="logo">
-        <img src="file:///Users/ioacademy/sites/academyServer/html/Portfolio/images/logo.png" alt="Anna Brereton's logo" />
+    <div class="nav-container">
+        <nav aria-label="main navigation">
+            <ul class="menu-buttons">
+                <li>
+                    <a class="menu-item" href="index.html" title="home" aria-label="home">
+                        <i class="fa-solid fa-house"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="about.html">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="contact.html">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
-    <div>
-        <h1>Anna Brereton - Web developer</h1>
-        <div id="cv">
-             <i class="fa-solid fa-download"></i>
-            <a href="file:///Users/ioacademy/sites/academyServer/html/Portfolio/CV.pdf">CV</a>
+
+    <div class="logo-name-cv">
+        <div class="logo fade-in-image">
+            <img src="images/logo.png" alt="Anna Brereton's logo" />
+        </div>
+        <div>
+            <h1>
+                Anna Brereton - Web developer
+            </h1>
+            <div class="cv">
+                <i class="fa-solid fa-download">
+                </i>
+                <a class="cv-pdf" aria-label="download" href="CV.pdf">
+                    CV
+                </a>
+            </div>
         </div>
     </div>
-</div>
 
-<footer>
-    <p class="footer">Copyright Anna Brereton</p>
-    <div class="media-links">
-        <a href="https://github.com/annabrereton"><i class="fa-brands fa-github"></i></a>
-        <a href="https://uk.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-    </div>
-</footer>
+    <footer>
+        <p class="footer">
+            Copyright Anna Brereton
+        </p>
+        <div class="media-links" aria-label="contact-links">
+            <a href="#" title="email">
+                <i class="fa-solid fa-envelope" aria-label="email">
+                </i>
+            </a>
+            <a href="https://github.com/annabrereton" title="github">
+                <i class="fa-brands fa-github" aria-label="github">
+                </i>
+            </a>
+            <a href="https://uk.linkedin.com/" title="linkedin">
+                <i class="fa-brands fa-linkedin" aria-label="linkedin">
+                </i>
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
