removed title attr

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
         <nav aria-label="main navigation">
             <ul class="menu-buttons">
                 <li>
-                    <a class="menu-item" href="index.html" title="home" aria-label="home">
+                    <a class="menu-item" href="index.html" aria-label="home">
                         <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
@@ -70,11 +70,11 @@
                         Project 1
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -90,11 +90,11 @@
                         Project 2
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -110,11 +110,11 @@
                         Project 3
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -130,11 +130,11 @@
                         Project 4
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -150,11 +150,11 @@
                         Project 5
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -170,11 +170,11 @@
                         Project 6
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -190,11 +190,11 @@
                         Project 7
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -210,12 +210,12 @@
                         Project 8
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
                         <a class="project-link" href="#">
-                            <i class="fa-solid fa-link" title="live project link" aria-label="live project link">
+                            <i class="fa-solid fa-link" aria-label="live project link">
                             </i>
                         </a>
                     </div>
@@ -230,11 +230,11 @@
                         Project 9
                     </h3>
                     <div class="project-links">
-                        <a class="project-link" href="https://github.com/annabrereton" title="github" aria-label="github">
+                        <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
                             </i>
                         </a>
-                        <a class="project-link" href="#" title="live project link" aria-label="live project link">
+                        <a class="project-link" href="#" aria-label="live project link">
                             <i class="fa-solid fa-link">
                             </i>
                         </a>
@@ -252,16 +252,16 @@
             Copyright Anna Brereton
         </p>
         <div class="media-links" aria-label="contact-links">
-            <a href="#" title="email">
-                <i class="fa-solid fa-envelope" aria-label="email">
+            <a href="#" aria-label="email">
+                <i class="fa-solid fa-envelope">
                 </i>
             </a>
-            <a href="https://github.com/annabrereton" title="github">
-                <i class="fa-brands fa-github" aria-label="github">
+            <a href="https://github.com/annabrereton" aria-label="github">
+                <i class="fa-brands fa-github">
                 </i>
             </a>
-            <a href="https://uk.linkedin.com/" title="linkedin">
-                <i class="fa-brands fa-linkedin" aria-label="linkedin">
+            <a href="https://uk.linkedin.com/" aria-label="linkedin">
+                <i class="fa-brands fa-linkedin">
                 </i>
             </a>
         </div>
