--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <nav aria-label="main navigation">
             <ul class="menu-buttons">
                 <li>
-                    <a class="menu-item" href="index.html" title="home" aria-label="home">
+                    <a class="menu-item" href="index.html" aria-label="home">
                         <i class="fa-solid fa-house"></i>
                     </a>
                 </li>
@@ -72,16 +72,16 @@
             Copyright Anna Brereton
         </p>
         <div class="media-links" aria-label="contact-links">
-            <a href="#" title="email">
-                <i class="fa-solid fa-envelope" aria-label="email">
+            <a href="#" aria-label="email">
+                <i class="fa-solid fa-envelope">
                 </i>
             </a>
-            <a href="https://github.com/annabrereton" title="github">
-                <i class="fa-brands fa-github" aria-label="github">
+            <a href="https://github.com/annabrereton" aria-label="github">
+                <i class="fa-brands fa-github">
                 </i>
             </a>
-            <a href="https://uk.linkedin.com/" title="linkedin">
-                <i class="fa-brands fa-linkedin" aria-label="linkedin">
+            <a href="https://uk.linkedin.com/" aria-label="linkedin">
+                <i class="fa-brands fa-linkedin">
                 </i>
             </a>
         </div>
