media query changes

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             <h1>
                 Contact me
             </h1>
-            <p class="contact-info">
+            <p class="contact-text">
                 Please feel free to get in touch via email at place-holder-email@gmail.com, or check out my social media links in the footer.
             </p>
         </div>
