added project photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,7 @@
                     <h3>
                         Project 1
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -87,6 +88,7 @@
                     <h3>
                         Project 2
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -107,6 +109,7 @@
                     <h3>
                         Project 3
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -127,6 +130,7 @@
                     <h3>
                         Project 4
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -147,6 +151,7 @@
                     <h3>
                         Project 5
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -167,6 +172,7 @@
                     <h3>
                         Project 6
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -187,6 +193,7 @@
                     <h3>
                         Project 7
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -207,6 +214,7 @@
                     <h3>
                         Project 8
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
@@ -227,6 +235,7 @@
                     <h3>
                         Project 9
                     </h3>
+                    <img src="images/project-img.png" alt="project-image">
                     <div class="project-links">
                         <a class="project-link" href="https://github.com/annabrereton" aria-label="github">
                             <i class="fa-brands fa-github">
