moved css to scss files

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Portfolio">
     <meta name="author" content="Anna Brereton">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="scss/styles.scss">
 
     <link rel="icon" href="images/favicon_io/favicon.ico" sizes="192x192">
     <link rel="shortcut icon" href="images/favicon_io/favicon-32x32.png">
@@ -58,14 +58,16 @@
         <div class="logo fade-in-image">
             <img src="images/logo.png" alt="Anna Brereton's logo" />
         </div>
-        <div>
+        <div class="name-cv">
             <h1>
                 Anna Brereton - Web developer
             </h1>
             <div class="cv">
-                <i class="fa-solid fa-download">
-                </i>
-                <a class="cv-pdf" aria-label="download" href="CV.pdf">
+                <a class="fa-download" href="CV.pdf">
+                    <i class="fa-solid fa-download" >
+                    </i>
+                </a>
+                <a class="cv-pdf">
                     CV
                 </a>
             </div>
