--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
     <meta name="description" content="Portfolio">
     <meta name="author" content="Anna Brereton">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="css/portfolio-styles.css">
+    <link rel="stylesheet" href="scss/portfolio-styles.scss">
 
     <link rel="icon" href="images/favicon_io/favicon.ico" sizes="192x192">
     <link rel="shortcut icon" href="images/favicon_io/favicon-32x32.png">
